--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -48,7 +48,7 @@
             <div class="form-actions">
                 <button type="submit" class="btn-submit">AGREGAR PRODUCTO
                 </button>
-                <a href="{{ url_for('index') }}" class="btn-cancel">CANCELAR
+                <a href="{{ url_for('inventario') }}" class="btn-cancel">CANCELAR
                 </a>
             </div>
         </form>
