--- a/templates/registro.html
+++ b/templates/registro.html
@@ -35,7 +35,8 @@
             <button type="submit">CREAR CUENTA</button>
         </form>
         <div class="footer">
-            <p>¿Ya tienes una cuenta? <a href="{{ url_for('login') }}">Inicia sesión aquí</a></p>
+            <a href="{{ url_for('index') }}">¿Ya tienes una cuenta? <strong>Inicia sesión aquí</stronng></a>
+
         </div>
     </div>
 </body>
