--- a/templates/transacciones.html
+++ b/templates/transacciones.html
@@ -12,7 +12,7 @@
         <header>
             <h1>HISTORIAL DE <span>TRANSACCIONES</span></h1>
             <div class="actions">
-                <a href="{{ url_for('index') }}" class="btn-secondary">
+                <a href="{{ url_for('inventario') }}" class="btn-secondary">
                     <i class="icon">←</i> VOLVER AL INVENTARIO
                 </a>
             </div>
