--- a/templates/update_product.html
+++ b/templates/update_product.html
@@ -34,7 +34,7 @@
                 <button type="submit" class="btn-update">
                     <i class="icon">🔄</i> ACTUALIZAR STOCK
                 </button>
-                <a href="{{ url_for('index') }}" class="btn-cancel">
+                <a href="{{ url_for('inventario') }}" class="btn-cancel">
                     <i class="icon">↩️</i> CANCELAR
                 </a>
             </div>
