--- a/templates/visualizar.html
+++ b/templates/visualizar.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>INVENTARIO <span>DISPONIBLR</span></h1>
+            <h1>INVENTARIO <span>DISPONIBLE</span></h1>
             <p class="subtitle">Vista de solo lectura para empleados</p>
         </header>
 
